--- a/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
@@ -35,7 +35,7 @@
     <string name="gs_performance_mode_detail">Creșteți utilizarea procesorului pentru a asigura o performanță crescută</string>
     <string name="install_game_count">Au fost adăugate %d jocuri</string>
     <string name="loading">Doar o secundă…</string>
-  <string name="lucky_result_title">roșu de înregistrare Asistent</string>
+  <string name="lucky_result_title">Plicuri roșii</string>
     <string name="main_toolbar_purchase">Adăugați</string>
     <string name="man_add_application">Adăugați manual aplicațiile cu pornire automată</string>
     <string name="miuishare_title_more">Mai multe</string>
