--- a/Romanian/main/Calculator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calculator.apk/res/values-ro/strings.xml
@@ -26,12 +26,13 @@
     <string name="convertion_unit_weight">Convertor unități de masă</string>
     <string name="cos">cos</string>
     <string name="cosDesc">cosinus</string>
-    <string name="currency_update_time_format">Ratele de schimb sunt furnizate de webull (%s)</string>
+    <string name="currency_update_time_format">Ratele de schimb sunt furnizate de Webull (%s)</string>
     <string name="current_rate_remind_commercial"/>
     <string name="current_rate_remind_fund"/>
     <string name="dateformat">dd/MM/yyyy</string>
     <string name="day">zi</string>
     <string name="del">DEL</string>
+    <string name="devided_by_zero_reminder_message">"Nu se poate împărți la zero"</string>
     <string name="digit0">0</string>
     <string name="digit1">1</string>
     <string name="digit2">2</string>
@@ -144,7 +145,7 @@
     <string name="preference_alert_follow_wechat">Copiați și lipiți în WeChat pentru a urmări</string>
     <string name="preference_alert_follow_wechat_button">Copiați</string>
     <string name="preference_check_update_summary_current_version">Versiunea curentă： %s</string>
-    <string name="preference_check_update_summary_new_version">A apărut o nouă versiune： %s</string>
+    <string name="preference_check_update_summary_new_version">Este disponibilă o nouă versiune： %s</string>
     <string name="preference_check_update_title">Căutați actualizări</string>
     <string name="preference_feedback_title">Întrebări frecvente</string>
     <string name="preference_follow_qq_group">Numărul grupului QQ: 523274279</string>
