--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -32,6 +32,8 @@
     <string name="alert_reminder_divider">|</string>
     <string name="alert_reminder_expired">Expirat</string>
     <string name="alert_title">Notificările calendarului</string>
+    <string name="anniversary_card_title">Aniversare</string>
+    <string name="anniversary_event_title">Aniversare: %1$s</string>
     <string name="app_label">Calendar</string>
     <string name="birthday_calendar_display_name">Memento zi de naştere</string>
     <string name="birthday_card_title">"Zi de naștere azi"</string>
@@ -39,8 +41,8 @@
     <string name="birthday_event_description_a_week_later">Peste o săptămână</string>
     <string name="birthday_event_description_day_after_tomorrow">Poimâine este </string>
     <string name="birthday_event_description_day_before_yesterday">Alaltăieri a fost</string>
-    <string name="birthday_event_description_days_ago">%1$s zile de la</string>
-    <string name="birthday_event_description_days_later">peste %1$s zile</string>
+    <string name="birthday_event_description_days_ago">%1$d zile de la</string>
+    <string name="birthday_event_description_days_later">peste %1$d zile</string>
     <string name="birthday_event_description_special">"%1$s a lui %2$s %3$s %4$s %5$s"</string>
     <string name="birthday_event_description_today">Astăzi este</string>
     <string name="birthday_event_description_tomorrow">Mâine este</string>
@@ -80,6 +82,11 @@
   <string name="chongsha">Fantome</string>
     <string name="copy_email">Copiaţi adresa de e-mail</string>
     <string name="copy_number">Copiaţi numărul de telefon</string>
+    <string name="countdown_card_title">Numărătoare inversă</string>
+    <string name="countdown_event_title">Numărătoare inversă: %1$s</string>
+    <string name="countdown_notify_before_3_day_title">Numărătoare inversă: %1$s în 3 zile</string>
+    <string name="countdown_notify_title">Numărătoare inversă: %1$s</string>
+    <string name="countdown_today">Astăzi</string>
     <string name="create_an_account_desc">"Calendarul funcţionează mai bine cu un Cont Xiaomi.
 
 • Accesaţi serviciul din orice browser web
@@ -108,6 +115,10 @@
     <string name="delete_this_event_title">Ştergeţi acest eveniment?</string>
   <string name="deleting_calendar">Dezabonare de la</string>
     <string name="departure">Plecare</string>
+    <string name="description_calendar">Aplicații de sistem/Calendar</string>
+    <string name="description_calendar_edit_event">Aplicații de sistem/Calendar/Agendă</string>
+    <string name="description_calendar_huangli"/>
+    <string name="description_calendar_subscribe_group"/>
     <string name="directory_searching_fmt">Se caută %s…</string>
     <string name="discard_label">Anulaţi</string>
     <string name="does_not_repeat">Eveniment unic</string>
@@ -117,21 +128,26 @@
   <string name="downloading">Descărcați</string>
   <string name="downloading_wallpaper">Imagine de fundal</string>
     <string name="edit_event_all_day_label">Toată ziua</string>
+    <string name="edit_event_anniversary_name_empty_hint">Introduceți numele evenimentului</string>
+    <string name="edit_event_anniversary_name_hint">Eveniment</string>
     <string name="edit_event_birthday_import_from_contact">Importați ziua de naștere din Agendă</string>
     <string name="edit_event_birthday_name_empty_hint">Introduceți un nume</string>
     <string name="edit_event_birthday_name_hint">Nume</string>
-    <string name="edit_event_birthday_reminder_3_days_before">Amintește-mi și cu 3 zile înainte</string>
-    <string name="edit_event_birthday_reminder_summary">În acea zi la %1$s</string>
-    <string name="edit_event_birthday_reminder_summary_3_days_before">Cu trei zile în urmă, și în acea zi la %1$s</string>
     <string name="edit_event_birthday_reminder_time">Dată memento</string>
     <string name="edit_event_calendar_label">Calendar</string>
     <string name="edit_event_choose_date">Selectați data</string>
     <string name="edit_event_confirm_message">Renunțați la modificări?</string>
+    <string name="edit_event_countdown_name_empty_hint">Introduceți numele evenimentului</string>
+    <string name="edit_event_countdown_name_hint">Eveniment</string>
     <string name="edit_event_from_label">De la</string>
     <string name="edit_event_input_year">Introduceți anul</string>
     <string name="edit_event_label">Detalii</string>
     <string name="edit_event_no_reminder_value">"Nu-mi aminti"</string>
+    <string name="edit_event_reminder_3_days_before">Amintește-mi și cu 3 zile înainte</string>
+    <string name="edit_event_reminder_summary">În acea zi la %1$s</string>
+    <string name="edit_event_reminder_summary_3_days_before">Cu 3 zile înainte și în acea zi la %1$s</string>
     <string name="edit_event_reminder_text">Pe %1$s la %2$s</string>
+    <string name="edit_event_reminder_time">Oră memento</string>
     <string name="edit_event_reminder_with_another_day_text">Pe %1$s, %2$s la %3$s</string>
     <string name="edit_event_show_all">Afişaţi-le pe toate</string>
     <string name="edit_event_tab_anniversary">Aniversare</string>
@@ -288,7 +304,7 @@
   <string name="olympic_total">Total</string>
   <string name="olympic_vs">VS</string>
   <string name="online_reminder_header_text">Memento</string>
-    <string name="path_calendar">Aplicații de sistem/Calendar/Setări</string>
+    <string name="path_calendar_settings">Aplicații de sistem/Calendar/Setări</string>
   <string name="pengzu">Ciupire</string>
     <string name="prefDialogTitle_vibrateWhen">Vibrare</string>
     <string name="pref_error_no_ringtone_select">Sunet implicit</string>
@@ -345,7 +361,11 @@
     <string name="saving_event">Eveniment salvat</string>
     <string name="saving_event_with_guest">Actualizările vor fi trimise</string>
     <string name="search">Căutaţi</string>
-    <string name="search_calendar">Calendar;Agendă;Memento</string>
+    <string name="search_calendar">"Dată;Faze lunare;Lunar;Almanac;Fortune;Agendă;Întâlnire;Memento;Zile libere;Vacanță;Zi de naștere;2016;2017;Spring Festival;Anul Nou;Ziua internațională a muncii;Mid-Autumn Festival"</string>
+    <string name="search_calendar_edit_event">Întâlnire;Memento;Agendă</string>
+    <string name="search_calendar_huangli"/>
+    <string name="search_calendar_settings">Calendar;Agendă;Memento</string>
+    <string name="search_calendar_subscribe_group"/>
     <string name="select_date">Selectaţi data</string>
     <string name="select_synced_calendars_title">Calendare de sincronizat</string>
     <string name="set_as_wallpaper">Setați ca imagine de fundal</string>
