--- a/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
@@ -36,7 +36,7 @@
     <string name="control_set_alarm_with_existing">Alarmă setată: %s</string>
     <string name="day">1 zi</string>
     <string name="day_concat">", "</string>
-    <string name="days">%s zile</string>
+    <string name="days">%d zile</string>
     <string name="delete">Ştergeţi</string>
     <string name="delete_alarm">Ştergeţi alarma</string>
     <string name="delete_alarm_confirm">Ştergeţi această alarmă?</string>
@@ -54,7 +54,7 @@
     <string name="full_wday_month_day_no_year">EEEE, d MMMM</string>
     <string name="hour">1 oră</string>
     <string name="hour_unit">h</string>
-    <string name="hours">%s ore</string>
+    <string name="hours">%d ore</string>
     <string name="keep_screen_on">Menține ecranul activ</string>
     <string name="label">Setaţi o etichetă</string>
     <string name="label_pref_summary">Etichetă</string>
@@ -91,7 +91,7 @@
     <string name="menu_item_sort_by_gmt_offset">Sortaţi după fusul orar</string>
     <string name="menu_item_sort_by_name">Sortaţi după nume</string>
     <string name="minute">1 minut</string>
-    <string name="minutes">%s minute</string>
+    <string name="minutes">%d minute</string>
     <string name="more_settings">Setări</string>
     <string name="never">O dată</string>
     <string name="oneshot_alarm">Ștergeți după ce expiră</string>
