--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -482,7 +482,7 @@
     <string name="private_toast_hint3">Glisați în jos pentru a vedea dosarele ascunse</string>
     <string name="prize_result_tip">Valorificați</string>
     <string name="prize_result_tip2">Bijuteriile merg în visteria dumneavoastră</string>
-    <string name="promot_enctypt_password">Introduceți parola utilizată pentru deblocarea telefonului sau pentru oprirea Modului Copil</string>
+    <string name="promot_enctypt_password">Introduceți parola utilizată pentru deblocarea telefonului</string>
     <string name="qq_btn_bind">QQ</string>
     <string name="qq_login_btn_str">QQ</string>
     <string name="qq_not_installed">"QQ nu este instalată"</string>
