--- a/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
+++ b/Romanian/main/QuickSearchBox.apk/res/values-ro/strings.xml
@@ -7,6 +7,7 @@
     <string name="application_desc">Aplicație</string>
     <string name="applications_search_label">Aplicații</string>
     <string name="apps_search_activity" />
+    <string name="choose_search_engine">Selectați motorul de căutare implicit</string>
     <string name="clear_history">Goliți istoricul de căutare</string>
     <string name="clear_shortcuts">Eliminaţi istoricul căutărilor</string>
     <string name="clear_shortcuts_agree">Eliminare istoric</string>
